# sensor-data-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  database.db  logging.conf  pyproject.toml  test_main.http
app/: database.py  main.py  metrics.py  models.py
