[project]
name = "Sensor_data_backend"
version = "0.1.0"
description = "A lightweight Python backend that accepts sensor data"
authors = [
    {name = "Bogomolov, Igor",email = "igor@gmail.com"}
]
readme = "README.md"
requires-python = "^3.14"
dependencies = [
    "fastapi (>=0.139.2,<0.140.0)",
    "uvicorn (>=0.51.0,<0.52.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "sqlmodel (>=0.0.39,<0.1.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
